--- a/README.Rmd
+++ b/README.Rmd
@@ -40,5 +40,20 @@ library(calcal)
 today <- Sys.Date()
 as_rd(today)
 as_gregorian(today)
-as_julian(today)
+```
+
+Some US holidays
+
+```{r holidays}
+c(
+  us_independence_day(2025),
+  us_labor_day(2025),
+  us_memorial_day(2025),
+  us_election_day(2025),
+  us_daylight_saving_start(2025),
+  us_daylight_saving_end(2025),
+  christmas(2025),
+  advent(2025),
+  epiphany(2025)
+)
 ```
