--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,8 @@ knitr::opts_chunk$set(
 )
 ```
 
-# calcal
+# calcal <img src="man/figures/calcal-hex.png" align="right" width = 150 />
+
 
 <!-- badges: start -->
 <!-- badges: end -->
