Added Reingold and Dershowitz as contributors and cph

--- a/README.Rmd
+++ b/README.Rmd
@@ -21,6 +21,8 @@ knitr::opts_chunk$set(
 
 The goal of calcal is to do calendrical calculations, based on the algorithms described in [Reingold and
     Dershowitz (2018) *Calendrical Calculations*, 4th edition, Cambridge University Press](https://doi.org/10.1017/9781107415058).
+    
+It is a translation of the Lisp code produced by Reingold and Dershowitz for Calendrica 4.0.
 
 ## Installation
 
