--- a/README.Rmd
+++ b/README.Rmd
@@ -41,12 +41,12 @@ Dates in multiple calendars:
 ```{r example}
 library(calcal)
 tibble::tibble(
-  dates = seq(as.Date("1900-02-27"), length = 15, by = "1 day"),
-  RD = as_rd(dates),
-  Gregorian = as_gregorian(dates),
-  ISO = as_iso(dates),
-  Julian = as_julian(dates),
-  Roman = as_roman(dates)
+  Gregorian = gregorian_date(1990, 2, 20) + 1:10,
+  Date = as.Date(Gregorian),
+  RD = as_rd(Gregorian),
+  ISO = as_iso(Gregorian),
+  Julian = as_julian(Gregorian),
+  Roman = as_roman(Gregorian)
 )
 ```
 
