--- a/README.Rmd
+++ b/README.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(
 options(width=90)
 ```
 
-# calcal <img src="man/figures/calcal-hex.png" align="right" width = 150 />
+# calcal <img src="man/figures/logo.png" align="right" width = 150 />
 
 
 <!-- badges: start -->
