--- a/README.Rmd
+++ b/README.Rmd
@@ -20,8 +20,7 @@ options(width = 90)
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of calcal is to do calendrical calculations, based on the algorithms described in [Reingold and
-    Dershowitz (2018) *Calendrical Calculations*, 4th edition, Cambridge University Press](https://doi.org/10.1017/9781107415058).
+The goal of calcal is to do calendrical calculations, based on the algorithms described in [Reingold and Dershowitz (2018) *Calendrical Calculations*, 4th edition, Cambridge University Press](https://doi.org/10.1017/9781107415058).
 
 It is largely a translation of the Lisp code produced by Reingold and Dershowitz for [Calendrica 4.0](https://github.com/EdReingold/calendar-code2).
 
@@ -87,3 +86,4 @@ tibble(
   pivot_wider(names_from = year, values_from = value) |>
   arrange(`2025`)
 ```
+
